force-app/main/default/objects/Lead/fields/Agreement_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when Holly needs to contact client to get a signed agreement.</description>
    <label>Agreement Escalation</label>
    <type>Checkbox</type>
</CustomField>