force-app/main/default/objects/Lead/fields/Alt_Email__c.field-meta.xml
<CustomField>
    <fullName>Alt_Email__c</fullName>
    <label>Parent 2 Email</label>
    <type>Email</type>
</CustomField>