force-app/main/default/objects/Lead/fields/Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone__c</fullName>
    <label>Parent 2 Phone</label>
    <type>Phone</type>
</CustomField>