force-app/main/default/objects/Lead/fields/Asset_Content_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_Cookie__c</fullName>
    <description>Syncs with Marketo. Cookie.</description>
    <label>Asset / Content (Cookie)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>