force-app/main/default/objects/Lead/fields/Asset_Content_FT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_FT__c</fullName>
    <description>Syncs with Marketo. First Touch.</description>
    <label>Asset / Content (FT)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>