force-app/main/default/objects/Lead/fields/Asset_Content_LT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_LT__c</fullName>
    <description>Syncs with Marketo. LastTouch.</description>
    <label>Asset / Content (LT)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>