force-app/main/default/objects/Lead/fields/Asset_Content_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_Referrer__c</fullName>
    <description>Syncs with Marketo. Referrer.</description>
    <label>Asset / Content (Referrer)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>