force-app/main/default/objects/Lead/fields/Babys_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Babys_Due_Date__c</fullName>
    <label>Baby&apos;s Due Date</label>
    <type>Date</type>
</CustomField>