force-app/main/default/objects/Lead/fields/BBB_Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>BBB_Gift_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BBB Gift Card</label>
    <type>Checkbox</type>
</CustomField>