force-app/main/default/objects/Lead/fields/Bill_Surrogate_Company__c.field-meta.xml
<CustomField>
    <fullName>Bill_Surrogate_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Surrogate Company</label>
    <type>Checkbox</type>
</CustomField>