force-app/main/default/objects/Lead/fields/Billing_Address2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address2__c</fullName>
    <label>Billing Address2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>