force-app/main/default/objects/Lead/fields/Billing_Issue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Billing_Issue_Flag__c</fullName>
    <description>Indicate if there is some billing issue or other issue that must be resolved. Select &quot;Resolved&quot; only if the issue has been fixed.</description>
    <inlineHelpText>Indicate if there is some billing issue or other issue that must be resolved. Select &quot;Resolved&quot; only if the issue has been fixed.</inlineHelpText>
    <label>Billing Issue Flag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need new cc</fullName>
            </value>
            <value>
                <fullName>Client provided new cc</fullName>
            </value>
            <value>
                <fullName>Client due referral gift card</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Billing error</fullName>
            </value>
            <value>
                <fullName>Uncollectible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>