force-app/main/default/objects/Lead/fields/Billing_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Last_Name__c</fullName>
    <label>Billing Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>