force-app/main/default/objects/Lead/fields/Billing_Notes_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes_Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when Holly needs to update discounts in Billing Notes -- when product stored is different from product purchased.</description>
    <label>Billing Notes Needs Review</label>
    <type>Checkbox</type>
</CustomField>