force-app/main/default/objects/Lead/fields/Birth_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_and_Time__c</fullName>
    <inlineHelpText>This field is being retired and replaced with separate fields for birth date and time, so time can be recorded in local time and converted to employee time for accurate tracking.</inlineHelpText>
    <label>Birth Date and Time (OLD)</label>
    <type>DateTime</type>
</CustomField>