force-app/main/default/objects/Lead/fields/Birth_Date_from_Courier__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_from_Courier__c</fullName>
    <inlineHelpText>Provides the Birth Date for the purpose of tracking delivery time of the kit to the lab.  When available, Collection Date should be used because it is more reliable.</inlineHelpText>
    <label>Birth Date from Courier</label>
    <type>Date</type>
</CustomField>