force-app/main/default/objects/Lead/fields/Birth_Plan_Choices__c.field-meta.xml
<CustomField>
    <fullName>Birth_Plan_Choices__c</fullName>
    <inlineHelpText>Used to sync info from Birth Planner. Used by Sales Reps to follow-up with clients.</inlineHelpText>
    <label>Birth Plan Choices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>