force-app/main/default/objects/Lead/fields/Birth_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Birth_Plan_Notes__c</fullName>
    <label>Birth Plan Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>