force-app/main/default/objects/Lead/fields/Birth_Time_from_Courier__c.field-meta.xml
<CustomField>
    <fullName>Birth_Time_from_Courier__c</fullName>
    <inlineHelpText>This is the birth time from courier, used to track the delivery of the kit to the lab.  This is a text field because time will be provided in local time of client.  Indicate AM or PM and Time Zone.</inlineHelpText>
    <label>Birth Time from Courier</label>
    <length>15</length>
    <type>Text</type>
</CustomField>