force-app/main/default/objects/Lead/fields/Birth_Time_Zone_from_Courier__c.field-meta.xml
<CustomField>
    <fullName>Birth_Time_Zone_from_Courier__c</fullName>
    <label>Birth Time Zone from Courier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eastern Time Zone</fullName>
            </value>
            <value>
                <fullName>Pacific Time Zone</fullName>
            </value>
            <value>
                <fullName>Central Time Zone</fullName>
            </value>
            <value>
                <fullName>Mountain Time Zone</fullName>
            </value>
            <value>
                <fullName>Atlantic Time Zone</fullName>
            </value>
            <value>
                <fullName>Samoa Time Zone</fullName>
            </value>
            <value>
                <fullName>Alaska Time Zone</fullName>
            </value>
            <value>
                <fullName>Hawaii–Aleutian Time Zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>