force-app/main/default/objects/Lead/fields/Calendly__c.field-meta.xml
<CustomField>
    <fullName>Calendly__c</fullName>
    <description>Enter the date when customer request an appointment using Calendly</description>
    <label>Calendly</label>
    <type>Date</type>
</CustomField>