force-app/main/default/objects/Lead/fields/Call_Count_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Call_Count_Outbound__c</fullName>
    <description>Fastcall Outbound Call Count</description>
    <label>Call Count Outbound</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>