force-app/main/default/objects/Lead/fields/Call_Rail_Source__c.field-meta.xml
<CustomField>
    <fullName>Call_Rail_Source__c</fullName>
    <description>Call Rail populates this field. Workflow will update Lead Source.</description>
    <label>Call Rail Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>