force-app/main/default/objects/Lead/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>No answer, no vm</fullName>
            </value>
            <value>
                <fullName>Sent SMS</fullName>
            </value>
            <value>
                <fullName>Sent Email</fullName>
            </value>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>