force-app/main/default/objects/Lead/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <description>Mapped to Opportunity, used by marketo to send co-reg SMS status</description>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCW#</fullName>
            </value>
            <value>
                <fullName>No Info</fullName>
            </value>
            <value>
                <fullName>Asked to not be called</fullName>
            </value>
            <value>
                <fullName>Prefers Email</fullName>
            </value>
            <value>
                <fullName>SMS Only - Coreg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>