force-app/main/default/objects/Lead/fields/Called_2x__c.field-meta.xml
<CustomField>
    <fullName>Called_2x__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this to indicate that the prospect was called a second time and a conversation took place or a message was left.</inlineHelpText>
    <label>Called 2x</label>
    <type>Checkbox</type>
</CustomField>