force-app/main/default/objects/Lead/fields/Called_3x__c.field-meta.xml
<CustomField>
    <fullName>Called_3x__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the lead has been called the third time by the sales team</description>
    <label>Called 3x</label>
    <type>Checkbox</type>
</CustomField>