force-app/main/default/objects/Lead/fields/Campaign_FT__c.field-meta.xml
<CustomField>
    <fullName>Campaign_FT__c</fullName>
    <description>Syncs with Marketo, First Touch</description>
    <label>Campaign (FT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>