force-app/main/default/objects/Lead/fields/Campaign_LT__c.field-meta.xml
<CustomField>
    <fullName>Campaign_LT__c</fullName>
    <description>Syncs with Marketo, LastTouch</description>
    <label>Campaign (LT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>