force-app/main/default/objects/Lead/fields/Campaign_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Referrer__c</fullName>
    <description>Syncs with Marketo, Referrer.</description>
    <label>Campaign (Referrer)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>