force-app/main/default/objects/Lead/fields/CC_Call_2_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CC_Call_2_Date_Time__c</fullName>
    <label>CC Call 2 Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>