force-app/main/default/objects/Lead/fields/CC_Comments_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Comments_1__c</fullName>
    <inlineHelpText>This field is only for the call center. All notes should go here, with the newest notes at the top. be sure to enter the date, who entered it, and clear notes for follow up.</inlineHelpText>
    <label>CC Comments 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>