force-app/main/default/objects/Lead/fields/CC_Comments_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Comments_2__c</fullName>
    <label>CC Comments 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>