force-app/main/default/objects/Lead/fields/CC_Email_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Email 2</label>
    <type>Checkbox</type>
</CustomField>