force-app/main/default/objects/Lead/fields/Certificate_ID__c.field-meta.xml
<CustomField>
    <fullName>Certificate_ID__c</fullName>
    <description>This field was replaced with the Certificate ID field on the Lab page. Data was moved to the new field on 9/13. This field can be deleted. The Collection Kit and Certificate ID.  Unique to each customer.</description>
    <inlineHelpText>The Collection Kit and Certificate ID.  Unique to each customer.</inlineHelpText>
    <label>Certificate ID - replaced</label>
    <length>21</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>