force-app/main/default/objects/Lead/fields/CFU_Assay_Test__c.field-meta.xml
<CustomField>
    <fullName>CFU_Assay_Test__c</fullName>
    <label>CFU Assay Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>