force-app/main/default/objects/Lead/fields/Channel_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Channel_Cookie__c</fullName>
    <description>Syncs with Marketo, Cookie</description>
    <label>Channel (Cookie)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>