force-app/main/default/objects/Lead/fields/Channel_FT__c.field-meta.xml
<CustomField>
    <fullName>Channel_FT__c</fullName>
    <description>Syncs with Marketo, First Touch</description>
    <label>Channel (FT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>