force-app/main/default/objects/Lead/fields/Channel_LT__c.field-meta.xml
<CustomField>
    <fullName>Channel_LT__c</fullName>
    <description>Syncs with Marketo, LastTouch</description>
    <label>Channel (LT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>