force-app/main/default/objects/Lead/fields/Channel_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Channel_Referrer__c</fullName>
    <description>Syncs with Marketo, Referrer</description>
    <label>Channel (Referrer)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>