force-app/main/default/objects/Lead/fields/Client_Billed__c.field-meta.xml
<CustomField>
    <fullName>Client_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Collection sheet matches enrollment option and successfully billed client?</description>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>