force-app/main/default/objects/Lead/fields/Client_requested_a_call__c.field-meta.xml
<CustomField>
    <fullName>Client_requested_a_call__c</fullName>
    <description>When checked, the client has requested a call from a cord blood specialist.  Used on the 9/2013 Bump Email Campaign.</description>
    <inlineHelpText>When checked, the client has requested a call from a cord blood specialist.  Used on the 9/2013 Bump Email Campaign.</inlineHelpText>
    <label>Client request a call?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
            </value>
            <value>
                <fullName>Yes, have a cord blood specialist call me.</fullName>
            </value>
            <value>
                <fullName>No, no need to contact me at this time.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>