force-app/main/default/objects/Lead/fields/Client_Responded__c.field-meta.xml
<CustomField>
    <fullName>Client_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Responded</label>
    <type>Checkbox</type>
</CustomField>