force-app/main/default/objects/Lead/fields/CM_BF_SMS__c.field-meta.xml
<CustomField>
    <fullName>CM_BF_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM/BF SMS</label>
    <type>Checkbox</type>
</CustomField>