force-app/main/default/objects/Lead/fields/Completed_Step_One__c.field-meta.xml
<CustomField>
    <fullName>Completed_Step_One__c</fullName>
    <label>Completed Step One</label>
    <length>20</length>
    <type>Text</type>
</CustomField>