force-app/main/default/objects/Lead/fields/Completed_Step_One_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Step_One_Date_and_Time__c</fullName>
    <description>Date and time client completed Step One.</description>
    <label>Completed Step One Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>