force-app/main/default/objects/Lead/fields/Confirmed_Storage_of__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Storage_of__c</fullName>
    <label>Confirmed Storage of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Just Cord Blood</fullName>
            </value>
            <value>
                <fullName>Cord Blood and Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Cord Blood and Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Cord Blood and Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Cord Blood, Cord Tissue and Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Cord Blood Cord Tissue and Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Cord Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Cord Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Cord Tissue and Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Cord Tissue and Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Twins – Just Cord Blood – One Installment</fullName>
            </value>
            <value>
                <fullName>Twins – Just Cord Blood – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Blood and Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Blood and Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Blood and Cord Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Blood and Cord Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Blood Cord Tissue and Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Blood Cord Tissue and Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Twins – Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Twins – Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Tissue and Placenta Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Twins – Cord Tissue and Placenta Tissue – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Triplets – Cord Blood – One Installment</fullName>
            </value>
            <value>
                <fullName>Triplets – Cord Blood – 12 Month Plan</fullName>
            </value>
            <value>
                <fullName>Triplets – Cord Blood and Cord Tissue – One Installment</fullName>
            </value>
            <value>
                <fullName>Triplets – Cord Blood and Cord Tissue – 12 Month Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>