force-app/main/default/objects/Lead/fields/Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contact_LastName__c</fullName>
    <label>Contact LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>