force-app/main/default/objects/Lead/fields/Contact_x4__c.field-meta.xml
<CustomField>
    <fullName>Contact_x4__c</fullName>
    <label>Contact x4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Sent Email</fullName>
            </value>
            <value>
                <fullName>Sent SMS</fullName>
            </value>
            <value>
                <fullName>No Answer, No VM</fullName>
            </value>
            <value>
                <fullName>No Answer, Sent SMS</fullName>
            </value>
            <value>
                <fullName>Left Voicemail Sent Email</fullName>
            </value>
            <value>
                <fullName>No answer; Sent email</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Other-Explain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>