force-app/main/default/objects/Lead/fields/Cord_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cord Tissue</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>