force-app/main/default/objects/Lead/fields/Cord_Tissue_Length_Condition__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Length_Condition__c</fullName>
    <label>Cord Tissue: Length &amp; Condition</label>
    <length>21</length>
    <type>Text</type>
</CustomField>