force-app/main/default/objects/Lead/fields/Cord_Tissue_Substitution__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Substitution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This client has requested that we store cord tissue if placenta tissue cannot be validated.</description>
    <inlineHelpText>This client has requested that we store cord tissue if placenta tissue cannot be validated.</inlineHelpText>
    <label>Client wants CT if PT not valid</label>
    <type>Checkbox</type>
</CustomField>