force-app/main/default/objects/Lead/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <label>Coupon Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>