force-app/main/default/objects/Lead/fields/Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Time__c</fullName>
    <description>Created for John Stieler for sales analysis</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>Formula field to convert Create Date to Date &amp; Time</inlineHelpText>
    <label>Create Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>